# nautilus-dave

./: .gitignore  .pre-commit-config.yaml  README.md
.docker/: jazzy.amd64.dockerfile  jazzy.arm64v8.dockerfile
.github/: dependabot.yml
.github/workflows/: docker-amd64.yml  docker-arm64v8.yml  fork-sync.yml  lint.yml
examples/dave_demos/launch/: dave_robot.launch.py
extras/: ardusub-ubuntu-install-local.sh  ardusub-ubuntu-install.sh  ros-jazzy-gz-harmonic-install.sh  virtual_joystick.html
hal/: package.xml  setup.py
hal/nautilus_hal/: bcu_sim_bridge.py  package.xml  pytest.ini  setup.cfg  setup.py
hal/nautilus_hal/config/: nautilus_params.yaml
hal/nautilus_hal/launch/: bridge.launch.py  bridge_launch.py  data_bag.launch.py  do_nothing_sim.launch.py  sawtooth_sim.launch.py  surface_sim.launch.py  trim_sim.launch.py  unified_sim.launch.py
hal/nautilus_hal/nautilus_hal/: acu_sim_bridge.py  bcu_sim_bridge.py  constants.py  external_sensor_sim_bridge.py  fault_injection.py  gt_pose_bridge.py  imu_sim_bridge.py  render_sdf.py
hal/nautilus_hal/nautilus_hal/bridges/: acu_sim_bridge.py  bcu_sim_bridge.py  bridge_base.py  external_sensor_sim_bridge.py  gt_pose_bridge.py  imu_sim_bridge.py  record_throttle.py
hal/nautilus_hal/nautilus_hal/injectors/: fault_injection.py
hal/nautilus_hal/test/: test_render_sdf_parity.py
models/dave_robot_models/: CMakeLists.txt  package.xml
models/dave_robot_models/config/bluerov2/: ardusub.parm  robot_config.py
models/dave_robot_models/config/bluerov2_heavy/: ardusub.parm  robot_config.py
models/dave_robot_models/config/bluerov2_heavy_multibeam_sonar/: ardusub.parm  robot_config.py
models/dave_robot_models/config/glider_nautilus/: robot_config.py
models/dave_robot_models/config/mavros/: mavros.yaml
models/dave_robot_models/description/bluerov2/: model.sdf
models/dave_robot_models/description/bluerov2_heavy/: model.sdf
models/dave_robot_models/description/bluerov2_heavy_multibeam_sonar/: model.sdf
models/dave_robot_models/description/glider_nautilus/: model.config  model.sdf  model.sdf.jinja  model_movable_fins.sdf  model_nautilus_nw.sdf  model_v02.sdf  model_with_acu.sdf
models/dave_robot_models/description/glider_slocum/: model.sdf
models/dave_robot_models/description/rexrov/: model.sdf
models/dave_robot_models/launch/: bluerov_teleop.launch.py  upload_robot.launch.py
models/dave_robot_models/meshes/glider_nautilus/: Nautilus-Glider-LeftFin.dae  Nautilus-Glider-Propeller.dae  Nautilus-Glider-RightFin.dae  Nautilus-Glider-TopRudder.dae  Nautilus-Glider-v02.dae  Nautilus-Glider.dae  nautilus_glider_nw_v03.dae  nautilus_glider_nw_v04.dae  nautilus_glider_rudder_v03.dae  nautilus_glider_rudder_v04.dae  nautilus_glider_rudder_v05.dae  nautilus_glider_whole_v03.dae  nautilus_glider_wing_l_v03.dae  nautilus_glider_wing_l_v04.dae  nautilus_glider_wing_r_v03.dae  nautilus_glider_wing_r_v04.dae
models/dave_robot_models/scripts/: ardusub_manual_control.py  keyboard_publisher.py  ws_to_joy.py
(+16 files in other folders)
