<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nautilus_hal</name>
  <version>0.0.1</version>
  <description>Simulation Hardware Abstraction Layer (HAL) for the Nautilus glider</description>
  <maintainer email="andrei.girjoaba@aris-space.ch">girji</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
