<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>dave_robot_models</name>
  <version>0.1.0</version>
  <description>Dave robot model description files are placed here.</description>
  <maintainer email="rakeshvivek97@gmail.com">Rakesh Vivekanandan</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <!-- This doesn't work yet https://github.com/gazebosim/ros_gz/pull/492 -->
    <!-- <gazebo_ros gazebo_model_path="${prefix}/meshes"/> -->
  </export>
</package>
